metadata/objects/grax_auditlog__x.object
<CustomObject>
    <description>grax$auditlog</description>
    <externalDataSource>GRAX_Audit_Trail</externalDataSource>
    <externalName>grax$auditlog</externalName>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>objectid</externalDeveloperName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>grax_auditlog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>objectid</externalDeveloperName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>GRAX_Audit_Trail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ModifiedByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>updatedbyid</externalDeveloperName>
        <label>ModifiedByUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>grax_auditlog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>auditid__c</fullName>
        <description>auditid</description>
        <externalDeveloperName>auditid</externalDeveloperName>
        <label>auditid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fieldupdated__c</fullName>
        <description>fieldupdated</description>
        <externalDeveloperName>fieldupdated</externalDeveloperName>
        <label>fieldupdated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newvalue__c</fullName>
        <description>newvalue</description>
        <externalDeveloperName>newvalue</externalDeveloperName>
        <label>newvalue</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>objectid__c</fullName>
        <description>objectid</description>
        <externalDeveloperName>objectid</externalDeveloperName>
        <label>objectid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objecttype__c</fullName>
        <description>objecttype</description>
        <externalDeveloperName>objecttype</externalDeveloperName>
        <label>objecttype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldvalue__c</fullName>
        <description>oldvalue</description>
        <externalDeveloperName>oldvalue</externalDeveloperName>
        <label>oldvalue</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>updatedate__c</fullName>
        <description>updatedate</description>
        <externalDeveloperName>updatedate</externalDeveloperName>
        <label>updatedate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>updatedbyid__c</fullName>
        <description>updatedbyid</description>
        <externalDeveloperName>updatedbyid</externalDeveloperName>
        <label>updatedbyid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>grax$auditlog</label>
    <pluralLabel>grax$auditlog</pluralLabel>
</CustomObject>